Fix user list cutoff when search bar is visible on small screens

--- a/resources/users.scss
+++ b/resources/users.scss
@@ -79,7 +79,6 @@ th.header.rank {
     display: inline-block;
     vertical-align: top;
     width: 225px;
-    float: right;
 
     .select2-selection__arrow {
         display: none;
